Fix simple page CSS on mobile

--- a/tjrapid/static/css/simple.css
+++ b/tjrapid/static/css/simple.css
@@ -39,7 +39,7 @@ h2 {
 }
 
 .container {
-    width: 800px;
+    max-width: 800px;
     text-align: center;
     margin: 2em auto;
 }
